add note to title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: scanf - blog
+title: [ARCHIVED] scanf - blog, see http://blog.alemayhu.com
 email: alexander@alemayhu.com
 description: > # this means to ignore newlines until "baseurl:"
   A place for random thoughts.
